--- a/.env.docker
+++ b/.env.docker
@@ -1,4 +1,15 @@
+# הגדרות עבור MySQL 
+MYSQL_ROOT_PASSWORD=1234
+MYSQL_DATABASE=contacts_db
+# MYSQL_USER=user_api
+# MYSQL_PASSWORD=user_pass
+
+# הגדרות -API 
 DB_HOST=db
-DB_USER=root
-DB_PASSWORD=1234
-DB_NAME=contacts_db
+DB_PORT=3306
+
+
+# DB_HOST=db
+# DB_USER=root
+# DB_PASSWORD=1234
+# DB_NAME=contacts_db
