--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,11 @@
-version: '3.8'
-
 services:
   db:
     image: mysql:8.0
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-uuser", "-ppassword" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     env_file:
       - .env.docker
     volumes:
@@ -14,7 +17,12 @@ services:
     ports:
       - "8000:80"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
 volumes:
   db_data:
+
+
+
+
